2009-05-09  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (DoHistory): Handle date changes here in order to avoid
	declaring a variable and having to pass it by reference to
	GetHistoryLine.
	(GetHistoryLine): Simplified. Also, don't set a revision if
	comparing an older revision with the current one.

2009-05-07  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (ApplyRules): Make sure we store $_ whenever we store
	pos because of recursive calls to ApplyRules.

2009-04-09  Alex Schroeder  <alex@gnu.org>

	* modules/load-lang.pl ($CurrentLanguage): New variable.
	(LoadLanguage): Set it.

2009-04-06  Alex Schroeder  <alex@gnu.org>

	* modules/namespaces.pl (NamespacesInitVariables): Match the code
	changes in GetId.
	(@NamespaceParameters): New.
	(NamespacesInitVariables): Use new option.
	(NamespacesInitVariables): Use new function.

	* wiki.pl (GrepFiltered): Short circuit if we end up with an empty
	regular expression. This can happen when using tags.pl and only
	specifying -tag:foo.

2009-04-05  Alex Schroeder  <alex@gnu.org>

	* modules/tags.pl (TagsMenu): Add menu.
	(TagCloud): New action, based on the search-freetext.pl
	implementation.

2009-04-04  Alex Schroeder  <alex@gnu.org>

	* modules/tags.pl (NewTagGrepFiltered, NewTagSearchString):
	Support searching for tags containing a space (being replaced by
	an underscore).

2009-03-28  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GrepFiltered): Sort output because grep -r doesn't
	produce sorted output.

2009-03-27  Alex Schroeder  <alex@gnu.org>

	* wiki.pl (GrepFiltered): Use grep -r because on larger wikis the
	command line is too large.

2009-03-22  Alex Schroeder  <alex@gnu.org>

	* modules/tags.pl (DoTagsReindex): Request lock and release lock
	when updating the index.

	* modules/localnames.pl (LocalNamesNewSave): Localize
	$OpenPageName and %Page so that it doesn't confuse other
	extensions hooking into Save.

2009-03-21  Alex Schroeder  <alex@gnu.org>
